--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,12 @@
     <artifactId>tomcat-jasper</artifactId>
     <version>9.0.56</version>
 </dependency>
+
+<!-- https://mvnrepository.com/artifact/jstl/jstl -->
+	<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
+		</dependency>
 	
 		<!-- https://mvnrepository.com/artifact/jstl/jstl -->
 <dependency>
