--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,11 @@ spring.h2.console.enabled=true
 #spring.datasource.url=jdbc:h2:mem:shashank
 #
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.data.mongodb.uri=mongodb+srv://new-Shashank:ShAsHaNk@cluster0.loytd.mongodb.net/<dbname>?retryWrites=true&w=majority
+server.port=8081
+spring.main.allow-bean-definition-overriding=true
