--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.h2.console.enabled=true
 #spring.datasource.driverClassName=org.h2.Driver
 #spring.datasource.username=sa
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
+mongodb.uri=mongodb+srv://new-Shashank:ShAsHaNk@cluster0.loytd.mongodb.net/<dbname>?retryWrites=true&w=majority
 spring.data.mongodb.uri=mongodb+srv://new-Shashank:ShAsHaNk@cluster0.loytd.mongodb.net/<dbname>?retryWrites=true&w=majority
-server.port=8081
+server.port=8089
 spring.main.allow-bean-definition-overriding=true
